# doubleagent

./: .gitignore  CLAUDE.md  README.md  double.hcl  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  devops-hygiene.yml  release-core.yml  release.yml  rust-core.yml  tag-core.yml  tag.yml
cli/: Cargo.toml
cli/src/: config.rs  git.rs  main.rs  mise.rs  process.rs  service.rs
cli/src/commands/: add.rs  contract.rs  list.rs  mod.rs  new.rs  reset.rs  seed.rs  start.rs  status.rs  stop.rs  update.rs
cmd/double/: main.go
contracts/: README.md  pyproject.toml
contracts/doubleagent_contracts/: __init__.py  decorators.py  target.py
contrib/agent-prompts/: add-service.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  project_config.rs  request_id.rs
crates/cli/src/commands/: add.rs  completions.rs  contract.rs  list.rs  mod.rs  reset.rs  run.rs  seed.rs  snapshot.rs  start.rs  status.rs  stop.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  git.rs  lib.rs  mise.rs  process.rs  service.rs  snapshot.rs
docs/: architecture.md  contributing.md  for-agents.md  webhooks.md
internal/builtin/: registry.go  registry_test.go
internal/config/: config.go  config_test.go
internal/engine/: engine.go  engine_test.go
pkg/sdk/: external.go  plugin.go  protocol.go  serve.go
plugins/github/: plugin.go  store.go
plugins/jira/: plugin.go  store.go
plugins/todo/: main.go  plugin.go  store.go
sdk/python/: README.md  pyproject.toml
sdk/python/doubleagent/: __init__.py  client.py  pytest.py
services/_lib/: pyproject.toml
services/_lib/snapshot_pull/: __init__.py  __main__.py  pyairbyte_backend.py  redactor.py  smart_filter.py  snapshot.py
services/_lib/src/doubleagent_sdk/: __init__.py  airbyte_adapter.py  airbyte_pull.py  connector.py  dual_target.py  generic_server.py  http_readonly.py  namespace.py  pyairbyte_backend.py  redactor.py  smart_filter.py  snapshot.py  state_overlay.py  webhook_simulator.py
services/_lib/src/snapshot_pull/: __init__.py  __main__.py  pyairbyte_backend.py  redactor.py  smart_filter.py  snapshot.py
services/_lib/tests/: test_airbyte_adapter.py  test_http_readonly.py  test_namespace.py  test_pyairbyte_backend.py  test_redactor.py  test_smart_filter.py  test_snapshot.py  test_snapshot_storage.py  test_state_overlay.py
services/auth0/: service.yaml
services/auth0/contracts/: conftest.py  pyproject.toml  test_roles.py  test_snapshots.py  test_tokens.py  test_users.py
services/auth0/fixtures/: startup.yaml
services/auth0/server/: main.py  pyproject.toml
services/descope/: service.yaml
services/descope/connector/: descope_connector.py  pull.py
services/descope/contracts/: conftest.py  pyproject.toml  test_roles.py  test_snapshots.py  test_tenants.py  test_tokens.py  test_users.py
services/descope/fixtures/: enterprise.yaml  startup.yaml
services/descope/server/: main.py  pyproject.toml
services/github/: service.yaml
services/github/contracts/: conftest.py  pyproject.toml  requirements.txt  test_issues.py  test_namespaces.py  test_repos.py  test_snapshots.py  test_webhooks.py
services/github/fixtures/: enterprise.yaml  startup.yaml
services/github/server/: main.py  pyproject.toml
services/jira/: service.yaml
services/jira/server/: main.py  pyproject.toml
services/linear/: service.yaml
services/linear/contracts/: conftest.py  pyproject.toml  test_issues.py  test_projects.py
services/linear/server/: main.py  pyproject.toml
services/posthog/: service.yaml
services/posthog/contracts/: conftest.py  pyproject.toml  test_capture.py  test_feature_flags.py
services/posthog/server/: main.py  pyproject.toml
services/resend/: service.yaml
services/resend/.memory/: api-substrate.md  learnings.md  research.json  research.md  sdk-analysis.md  state.json  test-specs.json
services/resend/contracts/: conftest.py  pyproject.toml  test_api_key_management.py  test_batch_email_sending.py  test_contact_management.py  test_domain_management.py  test_email_sending_lifecycle.py  test_error_handling.py  test_scheduled_email_management.py  test_template_email_integration.py  test_template_lifecycle.py  test_webhook_configuration.py
services/resend/server/: main.py  pyproject.toml
services/salesforce/: service.yaml
services/salesforce/server/: main.py  pyproject.toml
services/slack/: service.yaml
services/slack/contracts/: conftest.py  pyproject.toml  test_channels.py  test_messages.py  test_namespaces.py  test_snapshots.py
services/slack/fixtures/: startup.yaml
services/slack/server/: main.py  pyproject.toml
services/stripe/: .gitignore  service.yaml
services/stripe/contracts/: conftest.py  pyproject.toml  test_customers.py  test_payments.py
services/stripe/server/: main.py  pyproject.toml
services/todoist/: .gitignore  service.yaml
services/todoist.com/: .phase3_progress.json  .phase4_progress.json  README.md  sdk.json  service.yaml
services/todoist.com/contracts/: conftest.py  pyproject.toml  test_auth_and_idempotency.py  test_comments.py  test_filter.py  test_labels.py  test_projects.py  test_quick_add.py  test_sections.py  test_task_lifecycle.py  test_tasks.py  test_webhooks.py
services/todoist.com/server/: main.py  pyproject.toml
services/todoist/contracts/: conftest.py  pyproject.toml  test_auth_and_idempotency.py  test_comment_threading.py  test_comments.py  test_cross_resource_agent_workflows.py  test_due_dates_and_priorities.py  test_filter.py  test_label_management.py  test_labels.py  test_project_management.py  test_projects.py  test_quick_add.py  test_section_organization.py  test_sections.py  test_subtask_hierarchy.py  test_task_completion_lifecycle.py  test_task_crud_lifecycle.py  test_task_filtering_and_search.py  test_task_lifecycle.py  test_tasks.py  test_webhooks.py
services/todoist/server/: main.py  pyproject.toml
skills/: add-service.md
templates/python-fastapi/: main.py  pyproject.toml  webhooks.py
templates/python-flask/: main.py  pyproject.toml  webhooks.py
templates/typescript-express/: main.ts  package.json
