[package]
name = "doubleagent"
version = "0.1.0"
edition = "2021"
description = "Fake services for AI agents"
license = "MIT"
repository = "https://github.com/doubleagent/doubleagent"

[[bin]]
name = "doubleagent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3"
which = "7"
dirs = "6"
libc = "0.2"
anyhow = "1"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
