[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubleagent-contracts"
version = "0.1.0"
description = "Contract testing framework for DoubleAgent services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["doubleagent_contracts"]
