[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubleagent"
version = "0.1.0"
description = "SDK for running DoubleAgent fake services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["doubleagent"]
