[project]
name = "doubleagent-sdk"
version = "0.1.0"
description = "Shared library for DoubleAgent fake services: COW state, webhooks, connectors, redaction"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
airbyte = ["airbyte>=0.19.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doubleagent_sdk"]
