[project]
name = "github-contracts"
version = "1.0.0"
description = "Contract tests for GitHub fake"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
doubleagent = { path = "../../../sdk/python", editable = true }
doubleagent-contracts = { path = "../../../contracts", editable = true }

[dependency-groups]
dev = [
    "doubleagent",
    "doubleagent-contracts",
]
