[project]
name = "slack-contracts"
version = "1.0.0"
description = "Contract tests for Slack fake"
requires-python = ">=3.10"
dependencies = [
    "slack_sdk>=3.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
doubleagent = { path = "../../../sdk/python", editable = true }

[dependency-groups]
dev = [
    "doubleagent",
]
