[project]
name = "todoist-doubleagent-server"
version = "0.1.0"
description = "DoubleAgent fake service for Todoist API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
